--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DeltaCompressionDotNet" version="1.1.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net472" />
@@ -12,8 +13,11 @@
   <package id="Microsoft.Owin.Host.HttpListener" version="4.2.2" targetFramework="net472" />
   <package id="Microsoft.Owin.Hosting" version="4.2.2" targetFramework="net472" />
   <package id="Microsoft.Owin.StaticFiles" version="4.2.2" targetFramework="net472" />
+  <package id="Mono.Cecil" version="0.11.2" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="SharpCompress" version="0.17.1" targetFramework="net472" />
+  <package id="squirrel.windows" version="2.0.1" targetFramework="net472" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.117.0" targetFramework="net472" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net472" />
   <package id="System.Data.SQLite" version="1.0.117.0" targetFramework="net472" />
