--- a/App.config
+++ b/App.config
@@ -3,7 +3,10 @@
 	<configSections>
 		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-	</configSections>
+	 <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+   <section name="ArtiConnect.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </sectionGroup>
+ </configSections>
 
 	<!-- Veritabanı bağlantı dizesi eklendi -->
 	<connectionStrings>
@@ -40,6 +43,10 @@
 				<assemblyIdentity name="System.Data.SQLite.EF6" publicKeyToken="db937bc2d44ff139" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-1.0.117.0" newVersion="1.0.117.0" />
 			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
 
@@ -73,4 +80,11 @@
 			<add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
 		</DbProviderFactories>
 	</system.data>
+ <applicationSettings>
+  <ArtiConnect.Properties.Settings>
+   <setting name="ArtiConnect_com_ticari1_ews_Ticari1_eInvoice_Con_Web_Services" serializeAs="String">
+    <value>https://ews.ticari1.com/ticari1_webs/einvoice_con.cfc</value>
+   </setting>
+  </ArtiConnect.Properties.Settings>
+ </applicationSettings>
 </configuration>
