--- a/ArtiConnect.csproj
+++ b/ArtiConnect.csproj
@@ -235,6 +235,9 @@
     <Reference Include="InposExt.Net">
       <HintPath>..\ExtTest.Net\ExtTest.Net\ExtTest\bin\InposExt.Net.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=8.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.Bcl.AsyncInterfaces.8.0.0\lib\net462\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Owin, Version=4.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.Owin.4.2.2\lib\net45\Microsoft.Owin.dll</HintPath>
     </Reference>
@@ -274,6 +277,9 @@
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
       <HintPath>packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
+    <Reference Include="RestSharp, Version=112.1.0.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
+      <HintPath>packages\RestSharp.112.1.0\lib\net471\RestSharp.dll</HintPath>
+    </Reference>
     <Reference Include="SharpCompress, Version=0.17.1.0, Culture=neutral, PublicKeyToken=afb0a02973931d96, processorArchitecture=MSIL">
       <HintPath>packages\SharpCompress.0.17.1\lib\net45\SharpCompress.dll</HintPath>
     </Reference>
@@ -284,6 +290,9 @@
       <HintPath>packages\Swashbuckle.Core.5.6.0\lib\net40\Swashbuckle.Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
+    </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.SQLite, Version=1.0.117.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
@@ -298,9 +307,33 @@
     <Reference Include="System.Data.SQLite.Linq, Version=1.0.117.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
       <HintPath>packages\System.Data.SQLite.Linq.1.0.117.0\lib\net46\System.Data.SQLite.Linq.dll</HintPath>
     </Reference>
+    <Reference Include="System.EnterpriseServices" />
+    <Reference Include="System.Memory, Version=4.0.1.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.Memory.4.5.5\lib\net461\System.Memory.dll</HintPath>
+    </Reference>
     <Reference Include="System.Net.Http.Formatting, Version=5.2.9.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.AspNet.WebApi.Client.5.2.9\lib\net45\System.Net.Http.Formatting.dll</HintPath>
     </Reference>
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Numerics.Vectors, Version=4.1.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\System.Runtime.CompilerServices.Unsafe.6.0.0\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Text.Encodings.Web, Version=8.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.Text.Encodings.Web.8.0.0\lib\net462\System.Text.Encodings.Web.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Text.Json, Version=8.0.0.4, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.Text.Json.8.0.4\lib\net462\System.Text.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Cors, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.AspNet.Cors.5.0.0\lib\net45\System.Web.Cors.dll</HintPath>
     </Reference>
@@ -313,6 +346,7 @@
     <Reference Include="System.Web.Http.SelfHost, Version=5.2.9.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.AspNet.WebApi.SelfHost.5.2.9\lib\net45\System.Web.Http.SelfHost.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -327,10 +361,12 @@
     <Compile Include="Api\ApiLoggerAttribute.cs" />
     <Compile Include="Api\BaseApiController.cs" />
     <Compile Include="Api\Controllers\AyarController.cs" />
+    <Compile Include="Api\Controllers\EFaturaController.cs" />
     <Compile Include="Api\Controllers\InposController.cs" />
     <Compile Include="Api\Controllers\PrinterController.cs" />
     <Compile Include="Api\Controllers\RemoteServerController.cs" />
     <Compile Include="Api\Controllers\SerialPortController.cs" />
+    <Compile Include="Api\Controllers\YemekSepetiController.cs" />
     <Compile Include="Api\Modals\AddSubeOdemeRequestModal.cs" />
     <Compile Include="Api\Modals\AddSubeSatisRequestModal.cs" />
     <Compile Include="Api\Modals\Inpos\AddPaymentRequest.cs" />
@@ -341,10 +377,17 @@
     <Compile Include="Api\Modals\Printer\PrintLabelRequestModal.cs" />
     <Compile Include="Api\Modals\SendDataRequestModal.cs" />
     <Compile Include="Api\Modals\SerialPortRequestModal.cs" />
+    <Compile Include="Api\Modals\Ticari1\EArsivIptalRequest.cs" />
+    <Compile Include="Api\Modals\Ticari1\EFaturaPdfRequest.cs" />
+    <Compile Include="Api\Modals\Ticari1\EFaturaRequest.cs" />
+    <Compile Include="Api\Modals\Ticari1\FaturaXmlCollectionRequest.cs" />
+    <Compile Include="Api\Modals\Ticari1\FaturaXmlRequest.cs" />
+    <Compile Include="Api\Modals\Ticari1\GelenFaturaListRequest.cs" />
     <Compile Include="Api\Startup.cs" />
     <Compile Include="DataAccess\AppDbContext.cs" />
     <Compile Include="Entities\ApiLog.cs" />
     <Compile Include="Entities\Ayar.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="frmAna.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -358,11 +401,18 @@
       <DependentUpon>frmGuncelle.cs</DependentUpon>
     </Compile>
     <Compile Include="Integrations\Inpos\InposIntegrationMethods.cs" />
+    <Compile Include="Integrations\Ticari1\FaturaXmlModal.cs" />
+    <Compile Include="Integrations\Ticari1\Modals.cs" />
+    <Compile Include="Integrations\Ticari1\Ticari1Entegrasyon.cs" />
     <Compile Include="Managers\ApiLogManager.cs" />
     <Compile Include="Managers\TaskSchedulerManager.cs" />
     <Compile Include="Migrations\202504150913416_Init.cs" />
     <Compile Include="Migrations\202504150913416_Init.Designer.cs">
       <DependentUpon>202504150913416_Init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202505181849111_changes1.cs" />
+    <Compile Include="Migrations\202505181849111_changes1.Designer.cs">
+      <DependentUpon>202505181849111_changes1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
@@ -373,6 +423,11 @@
     <Compile Include="Reports\Etiket.designer.cs">
       <DependentUpon>Etiket.cs</DependentUpon>
     </Compile>
+    <Compile Include="Web References\com.ticari1.ews\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.map</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="frmAna.resx">
       <DependentUpon>frmAna.cs</DependentUpon>
     </EmbeddedResource>
@@ -381,6 +436,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202504150913416_Init.resx">
       <DependentUpon>202504150913416_Init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202505181849111_changes1.resx">
+      <DependentUpon>202505181849111_changes1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -424,6 +482,86 @@
     </None>
     <None Include="SwaggerUI\swagger-ui.js.map">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Web References\com.ticari1.ews\EdespGetDespStatus.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.ticari1.ews\EinvGetCustType.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.ticari1.ews\EinvGetDespatchPdf.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.ticari1.ews\EinvGetEdocInfo.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.ticari1.ews\EinvGetForexCancel.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.ticari1.ews\EinvGetForexHtml.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.ticari1.ews\EinvGetForexInfoByUUID.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.ticari1.ews\EinvGetForexList.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.ticari1.ews\EinvGetForexPdf.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.ticari1.ews\EinvGetForexStatus.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.ticari1.ews\EinvGetForexXml.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.ticari1.ews\EinvGetInvApprove.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.ticari1.ews\EinvGetInvBaseInfo.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.ticari1.ews\EinvGetInvCancel.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.ticari1.ews\EinvGetInvInfoByUUID.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.ticari1.ews\EinvGetInvList.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.ticari1.ews\EinvGetInvPdf.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.ticari1.ews\EinvGetInvStatus.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.ticari1.ews\EinvGetInvXml.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.ticari1.ews\EinvGetInvXmlColl.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.ticari1.ews\EinvGetUserList.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.ticari1.ews\einvoice_con.wsdl" />
+    <None Include="Web References\com.ticari1.ews\EinvPostDespatch.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.ticari1.ews\EinvPostForex.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.ticari1.ews\EinvPostInvoice.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.ticari1.ews\EinvUserLoginResp.datasource">
+      <DependentUpon>Reference.map</DependentUpon>
+    </None>
+    <None Include="Web References\com.ticari1.ews\Reference.map">
+      <Generator>MSDiscoCodeGenerator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -471,6 +609,25 @@
     <Content Include="SwaggerUI\swagger-ui.js">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WebReferences Include="Web References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WebReferenceUrl Include="https://ews.ticari1.com/ticari1_webs/einvoice_con.cfc%3fwsdl">
+      <UrlBehavior>Dynamic</UrlBehavior>
+      <RelPath>Web References\com.ticari1.ews\</RelPath>
+      <UpdateFromURL>https://ews.ticari1.com/ticari1_webs/einvoice_con.cfc%3fwsdl</UpdateFromURL>
+      <ServiceLocationURL>
+      </ServiceLocationURL>
+      <CachedDynamicPropName>
+      </CachedDynamicPropName>
+      <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
+      <CachedSettingsPropName>ArtiConnect_com_ticari1_ews_Ticari1_eInvoice_Con_Web_Services</CachedSettingsPropName>
+    </WebReferenceUrl>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
