--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -1,7 +1,9 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="ArtiConnect.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="ArtiConnect_com_ticari1_ews_Ticari1_eInvoice_Con_Web_Services" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">https://ews.ticari1.com/ticari1_webs/einvoice_con.cfc</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
