--- a/packages.config
+++ b/packages.config
@@ -7,6 +7,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.SelfHost" version="5.2.9" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Owin" version="4.2.2" targetFramework="net472" />
   <package id="Microsoft.Owin.Cors" version="4.2.2" targetFramework="net472" />
   <package id="Microsoft.Owin.FileSystems" version="4.2.2" targetFramework="net472" />
@@ -16,13 +17,22 @@
   <package id="Mono.Cecil" version="0.11.2" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="RestSharp" version="112.1.0" targetFramework="net472" />
   <package id="SharpCompress" version="0.17.1" targetFramework="net472" />
   <package id="squirrel.windows" version="2.0.1" targetFramework="net472" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.117.0" targetFramework="net472" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Data.SQLite" version="1.0.117.0" targetFramework="net472" />
   <package id="System.Data.SQLite.Core" version="1.0.117.0" targetFramework="net472" />
   <package id="System.Data.SQLite.EF6" version="1.0.117.0" targetFramework="net472" />
   <package id="System.Data.SQLite.EF6.Migrations" version="1.0.113" targetFramework="net472" />
   <package id="System.Data.SQLite.Linq" version="1.0.117.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net472" />
+  <package id="System.Text.Json" version="8.0.4" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
